--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     height: 100vh;
@@ -10,16 +9,20 @@ body {
 .main-content {
     height: 100vh;
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr;
 }
+
 .hide {
     display: none;
 }
 
 .show {
-    display: visible
+    display: block;
+}
+
+#movie-search {
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 #movie-search:focus {
@@ -30,33 +33,34 @@ body {
 }
 
 .resultsList {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 175px);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
     gap: 20px;
     overflow-y: scroll;
 
 }
+
 .search-holder {
-    display: grid;
-    align-content: center;
-    gap: 0px;
-    grid-template-columns: auto 40px;
+    display: flex;
+    justify-content: space-between;
     background-color: var(--background);
     border-radius: 6px;
     margin-bottom: 20px;
     border: 1px solid transparent;
     box-shadow: 0 0 0 2px transparent;
-    
+
 }
 
 .search-holder:focus-within {
     border: thin solid var(--focus);
-    
+
 }
 
 .search-icon {
     padding-top: 5px;
 }
+
 .movie-poster {
     min-width: 150px;
     min-height: 150px;
@@ -70,10 +74,11 @@ body {
 }
 
 #content-holder {
-    display: grid;
-    grid-template-rows: 40px auto;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
 }
+
 .movie-entry {
     display: grid;
     justify-items: center;
@@ -81,6 +86,7 @@ body {
     max-width: 150px;
     cursor: pointer;
 }
+
 .favorite-icon {
     position: absolute;
     top: 2x;
@@ -96,15 +102,18 @@ body {
     color: yellow;
     transition: all .2s ease-in-out;
 }
+
 .tabs {
     display: grid;
     gap: 10px;
     grid-template-columns: 1fr 1fr;
 }
+
 .results {
     overflow: auto;
     max-height: calc(100vh - 220px);
 }
+
 .tab {
     display: inline-block;
     cursor: pointer;
@@ -112,7 +121,7 @@ body {
     padding: 10px;
     border-radius: 3px;
     margin-bottom: 5px;
-    
+
 }
 
 .active {
@@ -129,19 +138,29 @@ body {
     right: 0px;
     z-index: 1000;
     backdrop-filter: blur(5px);
-    
+
 }
 
 #movieDetails {
     background-color: white;
     position: relative;
-    top: 30%;
-    left: 30%;
-    height: 500px;
-    width: 500px;
+    height: 80%;
+    width: 80%;
     border-radius: 4px;
     background-color: var(--background);
     padding: 20px;
+    margin: 20px;
+    overflow: auto;
+}
+
+@media screen and (min-width: 600px) {
+    #movieDetails {
+        top: 30%;
+        left: 30%;
+        height: 500px;
+        width: 500px;
+        margin: 0;
+    }
 }
 
 .close-details {
@@ -159,6 +178,11 @@ body {
 }
 
 #movie-overview {
-    overflow-y: scroll;
+    overflow: auto;
     max-height: 100px;
+}
+
+.fa-search-icon {
+    position: absolute;
+    right: 10px;
 }
